<resources>
    <string name="app_name">Awais khan Math Game</string>
    <string name="confirm">I confirm that I understand what plagiarism is and have read and understood the section on Assessment Offences in the Essential Information for Students. The work that I have submitted is entirely my own. Any work from other authors is duly referenced and acknowledged.</string>
    <string name="greater">Greater</string>
    <string name="expression_2">Expression 2</string>
    <string name="equals">Equals</string>
    <string name="less">less</string>
    <string name="student_id">Student ID: W18076815</string>
    <string name="student_name">Student Name: Awais Khan</string>
    <string name="Hint">Hint: Calculate the two expressions and compare them from left to right</string>
</resources>